  * Update debian/control:
    - Remove Brian Nelson from uploaders field.
      Thanks for his great work on Qt.
    - Drop cdbs build dependency.
    - Add libasound2-dev build dependency.
    - Add libqt4-multimedia package.
  * Update installed files and related lintian files.
  * Rewrite debian/rules, converted to dh usage.

 -- Fathi Boudra <fabo@debian.org>  Sun, 04 Oct 2009 21:53:47 +0200

qt4-x11 (4:4.5.3-1) unstable; urgency=low

  * New upstream release:
    - Fix CVE-2009-2700 - QSSlCertificate  incorrect verification of SSL
      certificate with NUL in subjectAltName. (Closes: #545793)
    - Fix a regresion in Qt 4.5.2 causing a broken clipboard with scim.
      (Closes: #544764, #546282)
    - Fix phonon wrong #include paths. (Closes: #537304)

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Switch from libreadline5-dev to libreadline-dev.

  +++ Changes by Modestas Vainius:

  * VCS changed to git, adjust Vcs-* field in debian/control accordingly.
  * Bump Standards-Version to 3.8.3: no changes needed.
  * Document Git repository policy and packaging workflows in
    debian/README.source.

  +++ Changes by Fathi Boudra:

  * Add upstream patches:
    - 0078-Fix-regressions-in-qeventloop-qtimer-and-qsocketnoti.patch
      Fix regressions in qeventloop, qtimer, and qsocketnotifier autotests.
  * Add Debian patches:
    - 99_build_translations
      Fix translations build when sources comes from git.
  * Add qt-coy patches:
    - 0288-more-x-keycodes.diff
      Fill gap of X.org/XFree multimedia/special/launcher keys. Qt up to 4.5.x
      is missing whole setup of multimedia keys already defined by X.
    - 0289-context-for-shortcuts-tr.diff
      Some languages have special rules for using "+" to concatenate strings
      and for example it needs to be Ctrl + Shift instead of Ctrl+Shift,
      adding context to these strings helps creating a more correct translation
    - 0287-qmenu-respect-minwidth.diff