@@ -17,6 +17,7 @@ qt4-x11 (4:4.6.0~~tp1+git1336+gc5c58c2-0fabo1) experimental-snapshots; urgency=l
     - Add libqt4-multimedia package.
   * Update installed files and related lintian files.
   * Rewrite debian/rules, converted to dh usage.
+  * Build with --no-separate-debug-info.
 
  -- Fathi Boudra <fabo@debian.org>  Sun, 04 Oct 2009 21:53:47 +0200
 
